# app/backend/routes/api.php
@@ -1,6 +1,7 @@
 <?php
 
 use App\Http\Controllers\v1\AuthController;
+use App\Http\Controllers\v1\CategoryController;
 use App\Http\Controllers\v1\ProductController;
 use Illuminate\Support\Facades\Route;
 
@@ -12,18 +13,23 @@ Route::middleware('auth:sanctum')->group(function () {
     Route::get('/user', [AuthController::class, 'user']);
     Route::get('/verify-token', [AuthController::class, 'verifyToken']);
 
-    // Route::apiResource('/products', ProductController::class); // Moved GET /products outside
-    Route::post('/products', [ProductController::class, 'store']);
-    Route::put('/products/{product}', [ProductController::class, 'update']);
-    Route::delete('/products/{product}', [ProductController::class, 'destroy']);
-
-    // Route::apiResource('orders', OrderController::class);
-    // Route::get('/orders', [OrderController::class, 'index']);
-    // Route::get('/orders/{id}', [OrderController::class, 'show']);
-    // Route::post('/orders', [OrderController::class, 'store']);
-    // Route::post('/orders/{id}/checkout', [OrderController::class, 'checkout']);
-
+    // Route::get('/admin',)
+    Route::prefix('/v1')->group(function () {
+        Route::post('/products', [ProductController::class, 'store']);
+        Route::put('/products/{id}', [ProductController::class, 'update']);
+        Route::delete('/products/{id}', [ProductController::class, 'destroy']);
+    
+        Route::post('/categories', [CategoryController::class, 'store']);
+        Route::delete('/categories/{id}', [CategoryController::class, 'destroy']);
+    });
 });
 
-Route::get('/products', [ProductController::class, 'index']);
-Route::get('/products/{product}', [ProductController::class, 'show']);
+Route::prefix('/v1')->group(function () {
+
+    Route::get('/products', [ProductController::class, 'index']);
+    Route::get('/products/{id}', [ProductController::class, 'show']);
+    Route::get('/categories', [CategoryController::class, 'index']);
+    Route::get('/test', function() {
+        return 'test';
+    });
+});
